--- a/.github/workflows/stale.yaml
+++ b/.github/workflows/stale.yaml
@@ -14,16 +14,18 @@ jobs:
         stale-issue-message: |-
           This issue is stale because it has been open for 90 days with no
           activity. It will automatically close after 30 more days of
-          inactivity. \nReopen the issue with `/reopen`.\nMark the issue as
+          inactivity. Reopen the issue with `/reopen`.Mark the issue as
           fresh by adding the comment `/remove-lifecycle stale`.
         stale-issue-label: 'lifecycle/stale'
+        exempt-issue-labels: 'lifecycle/frozen'
 
         stale-pr-message: |-
           This Pull Request is stale because it has been open for 90 days with
           no activity. It will automatically close after 30 more days of
-          inactivity. \nReopen with `/reopen`.\nMark as fresh by adding the
+          inactivity. Reopen with `/reopen`.Mark as fresh by adding the
           comment `/remove-lifecycle stale`.
         stale-pr-label: 'lifecycle/stale'
+        exempt-pr-labels: 'lifecycle/frozen'
 
         days-before-stale: 90
         days-before-close: 30
