--- a/tools/config-generator/templates/prow_periodic_test_job.yaml
+++ b/tools/config-generator/templates/prow_periodic_test_job.yaml
@@ -3,6 +3,8 @@
   agent: kubernetes
   [[indent_section 4 "labels" .Base.Labels]]
   decorate: true
+  [[indent_section 2 "reporter_config" .Base.ReporterConfig]]
+      [[indent_array_section 6 "job_states_to_report" .Base.JobStatesToReport]]
   [[.Base.Cluster]]
   [[indent_section 2 "extra_refs" .Base.ExtraRefs]]
   [[indent_array_section 4 "branches" .Base.Branches]]
