--- a/config/prod/prow/jobs/config.yaml
+++ b/config/prod/prow/jobs/config.yaml
@@ -291,12 +291,12 @@ presubmits:
       - name: covbot-token
         secret:
           secretName: covbot-token
-  - name: pull-knative-serving-istio-1.5-mesh
+  - name: pull-knative-serving-istio-latest-mesh
     agent: kubernetes
-    context: pull-knative-serving-istio-1.5-mesh
+    context: pull-knative-serving-istio-latest-mesh
     always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.5-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.5-mesh),?(\\s+|$)"
+    rerun_command: "/test pull-knative-serving-istio-latest-mesh"
+    trigger: "(?m)^/test (all|pull-knative-serving-istio-latest-mesh),?(\\s+|$)"
     decorate: true
     optional: true
     path_alias: knative.dev/serving
@@ -310,9 +310,9 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.5-latest --mesh"
+        - "./test/e2e-tests.sh --istio-version latest --mesh"
         - "--run-test"
-        - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --mesh"
+        - "./test/e2e-auto-tls-tests.sh --istio-version latest --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -331,12 +331,12 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  - name: pull-knative-serving-istio-1.5-no-mesh
+  - name: pull-knative-serving-istio-latest-no-mesh
     agent: kubernetes
-    context: pull-knative-serving-istio-1.5-no-mesh
+    context: pull-knative-serving-istio-latest-no-mesh
     always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.5-no-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.5-no-mesh),?(\\s+|$)"
+    rerun_command: "/test pull-knative-serving-istio-latest-no-mesh"
+    trigger: "(?m)^/test (all|pull-knative-serving-istio-latest-no-mesh),?(\\s+|$)"
     decorate: true
     optional: true
     path_alias: knative.dev/serving
@@ -350,9 +350,9 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.5-latest --no-mesh"
+        - "./test/e2e-tests.sh --istio-version latest --no-mesh"
         - "--run-test"
-        - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --no-mesh"
+        - "./test/e2e-auto-tls-tests.sh --istio-version latest --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -371,12 +371,12 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  - name: pull-knative-serving-istio-1.4-mesh
+  - name: pull-knative-serving-istio-stable-mesh
     agent: kubernetes
-    context: pull-knative-serving-istio-1.4-mesh
+    context: pull-knative-serving-istio-stable-mesh
     always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.4-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.4-mesh),?(\\s+|$)"
+    rerun_command: "/test pull-knative-serving-istio-stable-mesh"
+    trigger: "(?m)^/test (all|pull-knative-serving-istio-stable-mesh),?(\\s+|$)"
     decorate: true
     optional: true
     path_alias: knative.dev/serving
@@ -390,9 +390,9 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh"
+        - "./test/e2e-tests.sh --istio-version stable --mesh"
         - "--run-test"
-        - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --mesh"
+        - "./test/e2e-auto-tls-tests.sh --istio-version stable --mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -411,12 +411,12 @@ presubmits:
       - name: test-account
         secret:
           secretName: test-account
-  - name: pull-knative-serving-istio-1.4-no-mesh
+  - name: pull-knative-serving-istio-stable-no-mesh
     agent: kubernetes
-    context: pull-knative-serving-istio-1.4-no-mesh
+    context: pull-knative-serving-istio-stable-no-mesh
     always_run: false
-    rerun_command: "/test pull-knative-serving-istio-1.4-no-mesh"
-    trigger: "(?m)^/test (all|pull-knative-serving-istio-1.4-no-mesh),?(\\s+|$)"
+    rerun_command: "/test pull-knative-serving-istio-stable-no-mesh"
+    trigger: "(?m)^/test (all|pull-knative-serving-istio-stable-no-mesh),?(\\s+|$)"
     decorate: true
     optional: true
     path_alias: knative.dev/serving
@@ -430,9 +430,9 @@ presubmits:
         args:
         - "./test/presubmit-tests.sh"
         - "--run-test"
-        - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh"
+        - "./test/e2e-tests.sh --istio-version stable --no-mesh"
         - "--run-test"
-        - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --no-mesh"
+        - "./test/e2e-auto-tls-tests.sh --istio-version stable --no-mesh"
         volumeMounts:
         - name: test-account
           mountPath: /etc/test-account
@@ -4335,8 +4335,8 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "38 */2 * * *"
-  name: ci-knative-serving-istio-1.5-mesh
+- cron: "5 */2 * * *"
+  name: ci-knative-serving-istio-latest-mesh
   agent: kubernetes
   decorate: true
   cluster: "build-knative"
@@ -4354,9 +4354,9 @@ periodics:
       args:
       - "./test/presubmit-tests.sh"
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.5-latest --mesh"
+      - "./test/e2e-tests.sh --istio-version latest --mesh"
       - "--run-test"
-      - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --mesh"
+      - "./test/e2e-auto-tls-tests.sh --istio-version latest --mesh"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
@@ -4370,8 +4370,8 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "54 */2 * * *"
-  name: ci-knative-serving-istio-1.5-no-mesh
+- cron: "31 */2 * * *"
+  name: ci-knative-serving-istio-latest-no-mesh
   agent: kubernetes
   decorate: true
   cluster: "build-knative"
@@ -4389,9 +4389,9 @@ periodics:
       args:
       - "./test/presubmit-tests.sh"
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.5-latest --no-mesh"
+      - "./test/e2e-tests.sh --istio-version latest --no-mesh"
       - "--run-test"
-      - "./test/e2e-auto-tls-tests.sh --istio-version 1.5-latest --no-mesh"
+      - "./test/e2e-auto-tls-tests.sh --istio-version latest --no-mesh"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
@@ -4405,8 +4405,8 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "23 */2 * * *"
-  name: ci-knative-serving-istio-1.4-mesh
+- cron: "57 */2 * * *"
+  name: ci-knative-serving-istio-stable-mesh
   agent: kubernetes
   decorate: true
   cluster: "build-knative"
@@ -4424,9 +4424,9 @@ periodics:
       args:
       - "./test/presubmit-tests.sh"
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --mesh"
+      - "./test/e2e-tests.sh --istio-version stable --mesh"
       - "--run-test"
-      - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --mesh"
+      - "./test/e2e-auto-tls-tests.sh --istio-version stable --mesh"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
@@ -4440,8 +4440,8 @@ periodics:
     - name: test-account
       secret:
         secretName: test-account
-- cron: "53 */2 * * *"
-  name: ci-knative-serving-istio-1.4-no-mesh
+- cron: "47 */2 * * *"
+  name: ci-knative-serving-istio-stable-no-mesh
   agent: kubernetes
   decorate: true
   cluster: "build-knative"
@@ -4459,9 +4459,9 @@ periodics:
       args:
       - "./test/presubmit-tests.sh"
       - "--run-test"
-      - "./test/e2e-tests.sh --istio-version 1.4-latest --no-mesh"
+      - "./test/e2e-tests.sh --istio-version stable --no-mesh"
       - "--run-test"
-      - "./test/e2e-auto-tls-tests.sh --istio-version 1.4-latest --no-mesh"
+      - "./test/e2e-auto-tls-tests.sh --istio-version stable --no-mesh"
       volumeMounts:
       - name: test-account
         mountPath: /etc/test-account
