--- a/config/prod/prow/testgrid/testgrid.yaml
+++ b/config/prod/prow/testgrid/testgrid.yaml
@@ -58,17 +58,17 @@ test_groups:
 - name: ci-knative-serving-continuous
   gcs_prefix: knative-prow/logs/ci-knative-serving-continuous
   alert_stale_results_hours: 3
-- name: ci-knative-serving-istio-1.5-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.5-mesh
+- name: ci-knative-serving-istio-latest-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-latest-mesh
   alert_stale_results_hours: 3
-- name: ci-knative-serving-istio-1.5-no-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.5-no-mesh
+- name: ci-knative-serving-istio-latest-no-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-latest-no-mesh
   alert_stale_results_hours: 3
-- name: ci-knative-serving-istio-1.4-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.4-mesh
+- name: ci-knative-serving-istio-stable-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-stable-mesh
   alert_stale_results_hours: 3
-- name: ci-knative-serving-istio-1.4-no-mesh
-  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-1.4-no-mesh
+- name: ci-knative-serving-istio-stable-no-mesh
+  gcs_prefix: knative-prow/logs/ci-knative-serving-istio-stable-no-mesh
   alert_stale_results_hours: 3
 - name: ci-knative-serving-gloo-0.17.1
   gcs_prefix: knative-prow/logs/ci-knative-serving-gloo-0.17.1
@@ -851,17 +851,17 @@ dashboards:
     alert_options:
       alert_mail_to_addresses: "serverless-engprod-sea@google.com"
     num_failures_to_alert: 3
-  - name: istio-1.5-mesh
-    test_group_name: ci-knative-serving-istio-1.5-mesh
+  - name: istio-latest-mesh
+    test_group_name: ci-knative-serving-istio-latest-mesh
     base_options: "sort-by-name="
-  - name: istio-1.5-no-mesh
-    test_group_name: ci-knative-serving-istio-1.5-no-mesh
+  - name: istio-latest-no-mesh
+    test_group_name: ci-knative-serving-istio-latest-no-mesh
     base_options: "sort-by-name="
-  - name: istio-1.4-mesh
-    test_group_name: ci-knative-serving-istio-1.4-mesh
+  - name: istio-stable-mesh
+    test_group_name: ci-knative-serving-istio-stable-mesh
     base_options: "sort-by-name="
-  - name: istio-1.4-no-mesh
-    test_group_name: ci-knative-serving-istio-1.4-no-mesh
+  - name: istio-stable-no-mesh
+    test_group_name: ci-knative-serving-istio-stable-no-mesh
     base_options: "sort-by-name="
   - name: gloo-0.17.1
     test_group_name: ci-knative-serving-gloo-0.17.1
