Add flaky test reporter config for eventing-kafka-broker
Signed-off-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/tools/flaky-test-reporter/config/config.yaml
+++ b/tools/flaky-test-reporter/config/config.yaml
@@ -95,6 +95,11 @@ jobConfigs:
         identity: CQBKVH4QY
       - name: eventing-channels
         identity: CR2141CGY
+  - name: ci-knative-sandbox-eventing-kafka-broker-continuous
+    org: knative-sandbox
+    repo: eventing-kafka-broker
+    type: postsubmit
+    issueRepo: eventing-kafka-broker
   - name: ci-knative-test-infra-continuous
     org: knative
     repo: test-infra
