--- a/config/prod/prow/jobs/config.yaml
+++ b/config/prod/prow/jobs/config.yaml
@@ -4613,6 +4613,12 @@ periodics:
   name: ci-knative-serving-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: serving-api
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative
@@ -8703,6 +8709,12 @@ periodics:
   name: ci-knative-sandbox-net-certmanager-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: net-certmanager
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative-sandbox
@@ -8930,6 +8942,12 @@ periodics:
   name: ci-knative-sandbox-net-contour-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: net-contour
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative-sandbox
@@ -9157,6 +9175,12 @@ periodics:
   name: ci-knative-sandbox-net-http01-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: net-http01
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative-sandbox
@@ -9384,6 +9408,12 @@ periodics:
   name: ci-knative-sandbox-net-istio-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: net-istio
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative-sandbox
@@ -9702,6 +9732,12 @@ periodics:
   name: ci-knative-sandbox-net-kourier-nightly-release
   agent: kubernetes
   decorate: true
+  reporter_config:
+    slack:
+      channel: net-kourier
+      report_template: "The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"
+      job_states_to_report:
+      - "failure"
   cluster: "build-knative"
   extra_refs:
   - org: knative-sandbox
