Add Kong to flaky test reporter

--- a/tools/flaky-test-reporter/config/config.yaml
+++ b/tools/flaky-test-reporter/config/config.yaml
@@ -77,6 +77,13 @@ jobConfigs:
     slackChannels:
       - name: net-ambassador
         identity: C011X8SPF8X
+  - name: ci-knative-serving-kong-latest
+    org: knative
+    repo: serving
+    type: postsubmit
+    slackChannels:
+      - name: net-kong
+        identity: C01258TE58W
   - name: ci-knative-eventing-continuous
     org: knative
     repo: eventing
