--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -907,16 +907,9 @@ periodics:
     reporter_config:
       slack:
         channel: net-certmanager
-        job_states_to_report:
+        job_state_to_report:
         - failure
         report_template: '"The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"'
-  - custom-job: latest
-    command:
-    - ./test/presubmit-tests.sh
-    args:
-    - --run-test
-    - ./test/e2e-tests.sh --istio-version latest
-    dot-dev: true
   - dot-release: true
     dot-dev: true
   - auto-release: true
@@ -962,6 +955,13 @@ periodics:
         job_states_to_report:
         - failure
         report_template: '"The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"'
+  - custom-job: latest
+    command:
+    - ./test/presubmit-tests.sh
+    args:
+    - --run-test
+    - ./test/e2e-tests.sh --istio-version latest
+    dot-dev: true
   - dot-release: true
     dot-dev: true
     release: "0.14"
