--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -907,7 +907,7 @@ periodics:
     reporter_config:
       slack:
         channel: net-certmanager
-        job_state_to_report:
+        job_states_to_report:
         - failure
         report_template: '"The nightly release job fails, check the log: <{{.Status.URL}}|View logs>"'
   - dot-release: true
