Run more Istio tests when net-istio.yaml changes.

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -80,6 +80,7 @@ presubmits:
     dot-dev: true
     always-run: false
     optional: true
+    run-if-changed: ^third_party/net-istio.yaml
     args:
     - --run-test
     - ./test/e2e-tests.sh --istio-version stable --mesh
