Install Go 1.15 in the prow-tests image

--- a/images/prow-tests/Dockerfile
+++ b/images/prow-tests/Dockerfile
@@ -61,6 +61,7 @@ COPY images/prow-tests/source-gvm-and-run.sh /usr/local/bin
 # Install our versions of Go
 RUN source-gvm-and-run.sh install go1.13.14 --prefer-binary
 RUN source-gvm-and-run.sh install go1.14.6 --prefer-binary
+RUN source-gvm-and-run.sh install go1.15 --prefer-binary
 
 # Extra tools through go get
 # These run using the kubekins version of Go, not any defined by `gvm`
