Add performance tests for eventing-kafka-broker
Signed-off-by: Pierangelo Di Pilato <pierangelodipilato@gmail.com>

--- a/config/prod/prow/config_knative.yaml
+++ b/config/prod/prow/config_knative.yaml
@@ -348,6 +348,8 @@ presubmits:
   - go-coverage: true
     needs-dind: true
   knative-sandbox/eventing-kafka-broker:
+  - repo-settings: null
+    performance: true
   - build-tests: true
     needs-dind: true
   - unit-tests: true
